# nionswift-instrumentation-kit

./: .travis.yml  CHANGES.rst  MANIFEST.in  README.rst  meta.yaml  mypy.ini  pyproject.toml  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: python-package.yml
PlugIns/Camera/: CameraControlPanel.py  CameraHardwareSource.py  __init__.py  manifest.json
PlugIns/Camera/test/: CameraControl_test.py
PlugIns/EELSAcq_Phil/: PlugIn.py
PlugIns/Microscope/: STEMController.py  __init__.py  manifest.json
PlugIns/Scan/: ScanAcquisition.py  ScanControlPanel.py  ScanHardwareSource.py  __init__.py  manifest.json
PlugIns/Scan/test/: ScanControl_test.py
developer_docs/: decisions.md
docs/: Makefile  cameras.rst  conf.py  extensions.rst  index.rst  make.bat  scanning.rst  stem_controller.rst  synchronized_acquisition.rst  userguide.rst  video.rst
nion/device_kit/: CameraDevice.py  InstrumentDevice.py  ScanDevice.py
nion/instrumentation/: Acquisition.py  AcquisitionController.py  AcquisitionLibrary.py  AcquisitionPreferences.py  DataChannel.py  DriftTracker.py  HardwareSource.py  ListListener.py  MultiAcquire.py  __init__.py  camera_base.py  camera_base_1.py  scan_base.py  stem_controller.py  video_base.py
nion/instrumentation/test/: AcquisitionController_test.py  AcquisitionPanel_test.py  AcquisitionTestContext.py  AcquisitionTestContextConfiguration.py  Acquisition_test.py  CameraControl_test.py  DriftTracker_test.py  HardwareSource_test.py  MultiAcquire_test.py  MultipleShiftEELSAcquire_test.py  ScanControlModel_test.py  ScanControl_test.py  SynchronizedAcquisition_test.py  stem_controller_test.py
nionswift_plugin/nion_instrumentation_ui/: AcquisitionPanel.py  AcquisitionRecorder.py  CameraControlPanel.py  HardwareSourceActions.py  HardwareSourceChoice.py  MultiAcquirePanel.py  MultipleShiftEELSAcquire.py  ScanAcquisition.py  ScanControlPanel.py  VideoControlPanel.py  __init__.py  manifest.json
nionswift_plugin/nion_instrumentation_ui/resources/: acquisition_tests.json
scripts/: AcquisitionTestDialogScript.py
