[metadata]
name = nionswift-instrumentation
version = 22.2.0
author = Nion Software
author_email = swift@nion.com
description = A Nion Swift library for STEM instrumentation (Camera, Scan, Video, Microscope).
long_description = file: README.rst, CHANGES.rst
url = https://github.com/nion-software/nionswift-instrumentation-kit
license = GPL-3.0-only
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find_namespace:
python_requires = >=3.9,!=3.9.7
install_requires =
    niondata>=15.6.0,<16.0.0
    nionswift>=16.9.0,<17.0.0
    nionui>=7.0.0,<8.0.0
    nionutils>=0.4.8,<5.0.0
    numpy>=1.25,<2.0

[options.package_data]
nionswift_plugin.nion_instrumentation_ui =
    resources/*
    manifest.json
    py.typed
nion.instrumentation = py.typed

[options.packages.find]
include =
    nion
    nion.instrumentation
    nion.instrumentation.test
    nionswift_plugin
    nionswift_plugin.nion_instrumentation_ui
