[metadata]
name = nionswift-instrumentation
version = 23.1.0
# nionswift 16.12.1 (import-export read_data)
author = Nion Software
author_email = swift@nion.com
description = A Nion Swift library for STEM instrumentation (Camera, Scan, Video, Microscope).
long_description = file: README.rst, CHANGES.rst
url = https://github.com/nion-software/nionswift-instrumentation-kit
license = GPL-3.0-only
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find_namespace:
python_requires = >=3.11
install_requires =
    niondata>=15.7,<16.0
    nionswift>=16.12,<17.0
    nionui>=8.0,<9.0
    nionutils>=4.12,<5.0
    numpy>=2.0,<3.0

[options.package_data]
nionswift_plugin.nion_instrumentation_ui =
    resources/*
    manifest.json
    py.typed
nion.instrumentation = py.typed

[options.packages.find]
include =
    nion
    nion.device_kit
    nion.instrumentation
    nion.instrumentation.test
    nionswift_plugin
    nionswift_plugin.nion_instrumentation_ui
